--- a/examples/simple-sam/pom.xml
+++ b/examples/simple-sam/pom.xml
@@ -21,23 +21,23 @@
       <version>1.1.0</version>
     </dependency>
 
-    <!--<dependency>-->
-    <!--<groupId>com.fasterxml.jackson.core</groupId>-->
-    <!--<artifactId>jackson-databind</artifactId>-->
-    <!--<version>2.5.3</version>-->
-    <!--</dependency>-->
+    <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.5.3</version>
+    </dependency>
 
-    <!--<dependency>-->
-    <!--<groupId>com.fasterxml.jackson.core</groupId>-->
-    <!--<artifactId>jackson-core</artifactId>-->
-    <!--<version>2.5.3</version>-->
-    <!--</dependency>-->
+    <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.5.3</version>
+    </dependency>
 
-    <!--<dependency>-->
-    <!--<groupId>com.amazonaws</groupId>-->
-    <!--<artifactId>aws-java-sdk</artifactId>-->
-    <!--<version>1.11.106</version>-->
-    <!--</dependency>-->
+    <dependency>
+    <groupId>com.amazonaws</groupId>
+    <artifactId>aws-java-sdk</artifactId>
+    <version>1.11.106</version>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
