--- a/examples/simple-sam/pom.xml
+++ b/examples/simple-sam/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.rg</groupId>
+  <groupId>ca.ryangreen</groupId>
   <artifactId>apigateway-generic-java-sdk-example</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
@@ -10,7 +10,7 @@
   <dependencies>
 
     <dependency>
-      <groupId>org.rg</groupId>
+      <groupId>ca.ryangreen</groupId>
       <artifactId>apigateway-generic-java-sdk</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
@@ -35,8 +35,8 @@
 
     <dependency>
     <groupId>com.amazonaws</groupId>
-    <artifactId>aws-java-sdk</artifactId>
-    <version>1.11.106</version>
+    <artifactId>aws-java-sdk-core</artifactId>
+    <version>1.11.204</version>
     </dependency>
 
     <dependency>
