--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,18 @@
             </executions>
           </plugin>
 
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <!-- CircleCI build workaround -->
+              <argLine>${surefireArgLine} -Xms1024m -Xmx2048m</argLine>
+              <reuseForks>true</reuseForks>
+              <useSystemClassLoader>false</useSystemClassLoader>
+            </configuration>
+            <version>2.20.1</version><!--$NO-MVN-MAN-VER$-->
+        </plugin>
+
         </plugins>
       </build>
     </profile>
